# rate_my_commit

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: cli.rs  consts.rs  lib.rs  main.rs  message.rs
src/bot/: handler.rs  mod.rs
src/models/: mod.rs
src/rating/: completion.rs  error.rs  mod.rs
